<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AAAWordUp</string>
    <string name="settings">Settings</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_words">Delete Words</string>
    <string name="start_test">Start Test</string>
    <string name="add_new_word">Add New Word</string>
    <string name="submit">Submit</string>
    <string name="repeat">Repeat</string>
    <string name="delete">Delete</string>
    <string name="clear_counts">Clear Counts</string>
    <string name="next_word">Next Word</string>
    <string name="show_word_def">Show word Definition</string>
    <string name="show_word">Show word</string>
    <string name="dialog_title_spell_words">Spell the Word</string>
    <string name="hint_add_new_word">Enter a new word!!!</string>
    <string name="hint_spell_word">Enter the word!</string>
    <string name="msg_word_correct">Yay, you got the word correct</string>
    <string name="msg_word_incorrect">D\'oh, you fucked it up, try again.</string>

    <string-array name="filter_list">
        <item>All</item>
        <item>Untested</item>
        <item>Correct</item>
        <item>Incorrect</item>
    </string-array>

    <string-array name="filter_test_size">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
        <item>100</item>
    </string-array>

    <string name="definition">Definition</string>
    <string name="select_from">Select from</string>
    <string name="num_words">Num Words</string>

</resources>