<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_wordAttempt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_spell_word"
            android:inputType="textNoSuggestions"
            android:textSize="26sp" />

        <ImageButton
            android:id="@+id/btn_repeatWord"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.2"
            android:contentDescription="@string/repeat"
            android:scaleType="fitXY"
            android:src="@drawable/ic_action_volume_on" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_submitWord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/submit" />

        <Button
            android:id="@+id/btn_nextWord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/next_word" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/definition"
        android:textSize="25sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/tv_word_def"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="111"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text=""
        android:textSize="20sp" />

    <ListView
        android:id="@+id/lv_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp" 
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

</LinearLayout>